# PathMaid

./: .gitignore  CLAUDE.md  _verify_locales.js  eslint.config.js  index.html  package.json  pnpm-lock.yaml  steiger.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: main.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
LICENSES/: pf2-locale-ru-CONTRIBUTORS.md
docs/: README.md
docs/database/: README.md  erd.md  migrations.md  queries.md  schema.md
docs/technical/: README.md  architecture.md  engine.md  shared-api.md
docs/user-guide/: README.md  bestiary-encounters.md  characters.md  combat.md  custom-creatures.md  getting-started.md  reference.md
engine/: index.ts  types.ts
engine/__tests__/: apply-tier.test.ts  death-progression.test.ts  degree-of-success.test.ts  iwr.test.ts  weak-elite.test.ts  xp.test.ts
engine/actions/: types.ts
engine/conditions/: conditions.ts  death-progression.ts
engine/creature-building/: benchmarks.ts  getBenchmark.ts  recall-knowledge.ts  roles.ts  sanity.ts  types.ts
engine/damage/: crit-damage.ts  damage.ts  iwr.ts
engine/dice/: dice.ts
engine/effects/: adjust-strike.ts  battle-form.ts  fortune.ts  grant-item.ts  notes.ts  predicate-context.ts  predicate-evaluator.ts  spell-effect-modifiers.ts
engine/encounter/: apply-tier.ts  weak-elite.ts
src/: App.vue  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sync.rs
(+404 files in other folders)
