[package]
name = "pathbuddy"
version = "0.2.1-pre-alpha"
description = "Pathfinder 2e DM Assistant - Combat Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "pathbuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
